testdata/zkc/invalid/if_invalid_03.zkc
;;error:4:16-17:unexpected token
function f(u8 x) -> (u8 r) {
  r = 0
  if x == (x + ) {
    r = 1
    return
  }
  return
}
